Table User {
id int pk
first_name varchar
last_name varchar
email varchar
username varchar
}

Table Games{
id int pk
user_id int [ref: > User.id]
title varchar
description varchar
designer varchar
year_released int
number_of_players int
time_to_play int
age_restriction int
}

Table Categories{
id int pk
label varchar
}


Table Game_review{
id int pk
user_id int [ref: > User.id]
review varcahr
game_id int  [ref: > Games.id]
}

Table Game_rating{
id int pk
rating int
user_id int [ref: > User.id]
game_id int [ref: > Games.id]
}

Table Game_categories{
id int pk
category_id int [ref: > Categories.id]
game_id int [ref: > Games.id]
}

Table Game_picture{
id int pk 
image_url url
game_id int [ref: > Games.id]
}